@@ -26,10 +26,13 @@ import org.monarchinitiative.exomiser.core.genome.GenomeAssembly;
 import org.monarchinitiative.exomiser.data.genome.model.AlleleResource;
 import org.monarchinitiative.exomiser.data.genome.model.archive.*;
 import org.monarchinitiative.exomiser.data.genome.model.parsers.*;
+import org.monarchinitiative.exomiser.data.genome.model.resource.ClinVarAlleleResource;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.test.context.TestPropertySource;
 import org.springframework.test.context.junit.jupiter.SpringJUnitConfig;
 
+import java.net.URL;
+import java.nio.file.Path;
 import java.nio.file.Paths;
 import java.util.Map;
 
@@ -57,6 +60,19 @@ public class Hg38ConfigTest {
     }
 
     @Test
+    void testClinVarResource() throws Exception {
+        ClinVarAlleleResource clinVarResource = instance.clinVarAlleleResource();
+
+        Archive expectedArchive = new TabixArchive(Paths.get("src/test/resources/hg38/variants/clinvar.vcf.gz"));
+        URL expectedUrl = new URL("ftp://ftp.ncbi.nlm.nih.gov/pub/clinvar/vcf_GRCh38/clinvar.vcf.gz");
+
+        assertThat(clinVarResource.getName(), equalTo("hg38.clinvar"));
+        assertThat(clinVarResource.getParser(), instanceOf(ClinVarAlleleParser.class));
+        assertThat(clinVarResource.getArchive(), equalTo(expectedArchive));
+        assertThat(clinVarResource.getResourceUrl(), equalTo(expectedUrl));
+    }
+
+    @Test
     public void testResources() {
         Map<String, AlleleResource> actualResources = instance.hg38AlleleResources();
 
@@ -64,12 +80,14 @@ public class Hg38ConfigTest {
 
         alleleResources.put("gnomad-genome", instance.gnomadGenomeAlleleResource());
         alleleResources.put("gnomad-exome", instance.gnomadExomeAlleleResource());
-        alleleResources.put("dbsnp", instance.dbSnpAlleleResource());
+        alleleResources.put("gnomad-mito", instance.gnomadMitoAlleleResource());
+        alleleResources.put("alfa", instance.alfaAlleleResource());
+//        alleleResources.put("dbsnp", instance.dbSnpAlleleResource());
         alleleResources.put("uk10k", instance.uk10kAlleleResource());
-        alleleResources.put("exac", instance.exacAlleleResource());
-        alleleResources.put("esp", instance.espAlleleResource());
+        // exac removed as this is part of gnomad since v2.1
+        // esp removed as this is part of gnomad since v4
         alleleResources.put("dbnsfp", instance.dbnsfpAlleleResource());
-        alleleResources.put("clinvar", instance.clinVarAlleleResource());
+        // clinvar removed as this is now standalone
 
         Map<String, AlleleResource> expectedResources = alleleResources.build();
 
@@ -125,10 +143,10 @@ public class Hg38ConfigTest {
     public void gnomadGenomeAlleleResource() throws Exception {
         AlleleResource alleleResource = instance.gnomadGenomeAlleleResource();
 
-        Archive expectedArchive = new TabixArchive(Paths.get("src/test/resources/hg38/variants/gnomad.genomes.r2.0.1.sites.GRCh38.noVEP.vcf.gz"));
-        assertThat(alleleResource.getParser(), instanceOf(ExacAlleleParser.class));
-        GnomadGenomeAlleleParser exacAlleleParser = (GnomadGenomeAlleleParser) alleleResource.getParser();
-        assertThat(exacAlleleParser.getPopulationKeys(), equalTo(ExacPopulationKey.GNOMAD_GENOMES));
+        Archive expectedArchive = new DirectoryArchive(Path.of("src/test/resources/hg38/variants/gnomad-genomes-3-1-2"), "", "bgz");
+        assertThat(alleleResource.getParser(), instanceOf(Gnomad3GenomeAlleleParser.class));
+        Gnomad3GenomeAlleleParser gnomadAlleleParser = (Gnomad3GenomeAlleleParser) alleleResource.getParser();
+        assertThat(gnomadAlleleParser.getPopulationKeys(), equalTo(GnomadPopulationKey.GNOMAD_V4_GENOMES));
         assertThat(alleleResource.getArchive(), equalTo(expectedArchive));
     }
 
@@ -136,10 +154,10 @@ public class Hg38ConfigTest {
     public void gnomadExomeAlleleResource() throws Exception {
         AlleleResource alleleResource = instance.gnomadExomeAlleleResource();
 
-        Archive expectedArchive = new TabixArchive(Paths.get("src/test/resources/hg38/variants/gnomad.exomes.r2.0.1.sites.GRCh38.noVEP.vcf.gz"));
-        assertThat(alleleResource.getParser(), instanceOf(ExacAlleleParser.class));
-        GnomadExomeAlleleParser exacAlleleParser = (GnomadExomeAlleleParser) alleleResource.getParser();
-        assertThat(exacAlleleParser.getPopulationKeys(), equalTo(ExacPopulationKey.GNOMAD_EXOMES));
+        Archive expectedArchive = new DirectoryArchive(Path.of("src/test/resources/hg38/variants/gnomad-genomes-3-1-2"), "", "bgz");
+        assertThat(alleleResource.getParser(), instanceOf(Gnomad3GenomeAlleleParser.class));
+        Gnomad3GenomeAlleleParser gnomadAlleleParser = (Gnomad3GenomeAlleleParser) alleleResource.getParser();
+        assertThat(gnomadAlleleParser.getPopulationKeys(), equalTo(GnomadPopulationKey.GNOMAD_V4_EXOMES));
         assertThat(alleleResource.getArchive(), equalTo(expectedArchive));
     }
 
