@@ -20,13 +20,13 @@
 
 package org.monarchinitiative.exomiser.data.genome.model.parsers;
 
-import com.google.common.collect.ImmutableList;
-import com.google.common.collect.ImmutableMap;
 import org.junit.jupiter.api.Test;
 import org.monarchinitiative.exomiser.core.model.pathogenicity.ClinVarData;
 import org.monarchinitiative.exomiser.data.genome.model.Allele;
 
 import java.util.EnumSet;
+import java.util.List;
+import java.util.Map;
 
 
 /**
@@ -44,7 +44,7 @@ public class ClinVarAlleleParserTest extends AbstractAlleleParserTester<ClinVarA
         String line = "1	28590	.	T	TTGG	999	PASS	";
         Allele expected = new Allele(1, 28590, "T", "TTGG");
 
-        assertParseLineEquals(line, ImmutableList.of(expected));
+        assertParseLineEquals(line, List.of(expected));
     }
 
     @Test
@@ -52,29 +52,31 @@ public class ClinVarAlleleParserTest extends AbstractAlleleParserTester<ClinVarA
         String line = "1	28590	.	T	TTGG	999	PASS	UNWANTED=0.003;FIELDS=these_should_not_produce_anything";
         Allele expected = new Allele(1, 28590, "T", "TTGG");
 
-        assertParseLineEquals(line, ImmutableList.of(expected));
+        assertParseLineEquals(line, List.of(expected));
     }
 
     @Test
     public void testUnwantedInfoField() {
-        String line = "1	28590	.	T	TTGG	999	PASS	ALLELEID=12345;UNWANTED=0.003;FIELDS=these_should_not_produce_anything";
+        String line = "1	28590	54321	T	TTGG	999	PASS	ALLELEID=12345;UNWANTED=0.003;FIELDS=these_should_not_produce_anything;RS=11111111";
         Allele expected = new Allele(1, 28590, "T", "TTGG");
+        expected.setRsId("11111111");
         expected.setClinVarData(ClinVarData.builder()
-                .alleleId("12345")
+                .variationId("54321")
                 .build());
 
-        assertParseLineEquals(line, ImmutableList.of(expected));
+        assertParseLineEquals(line, List.of(expected));
     }
 
     @Test
-    public void testParseAlleleId() {
-        String line = "1	28590	.	T	TTGG	999	PASS	ALLELEID=12345";
+    public void testParseVariationId() {
+        String line = "1	28590	54321	T	TTGG	999	PASS	ALLELEID=12345";
         Allele expected = new Allele(1, 28590, "T", "TTGG");
+        expected.setRsId("54321");
         expected.setClinVarData(ClinVarData.builder()
-                .alleleId("12345")
+                .variationId("54321")
                 .build());
 
-        assertParseLineEquals(line, ImmutableList.of(expected));
+        assertParseLineEquals(line, List.of(expected));
     }
 
     @Test
@@ -83,25 +85,26 @@ public class ClinVarAlleleParserTest extends AbstractAlleleParserTester<ClinVarA
         Allele expected = new Allele(7, 117199644, "ATCT", "A");
         expected.setRsId("7105");
         expected.setClinVarData(ClinVarData.builder()
-                .alleleId("22144")
+                .variationId("7105")
                 .primaryInterpretation(ClinVarData.ClinSig.PATHOGENIC)
-                .reviewStatus("practice_guideline")
+                .reviewStatus(ClinVarData.ReviewStatus.PRACTICE_GUIDELINE)
                 .build());
 
-        assertParseLineEquals(line, ImmutableList.of(expected));
+        assertParseLineEquals(line, List.of(expected));
     }
 
     @Test
     public void testParseClnSigLikelyPathogenic() {
-        String line = "10	123256215	.	T	C	.	.	ALLELEID=361707;CLNREVSTAT=criteria_provided,_single_submitter;CLNSIG=Likely_pathogenic";
+        String line = "10	123256215	374823	T	C	.	.	ALLELEID=361707;CLNREVSTAT=criteria_provided,_single_submitter;CLNSIG=Likely_pathogenic;RS=121918506";
         Allele expected = new Allele(10, 123256215, "T", "C");
+        expected.setRsId("121918506");
         expected.setClinVarData(ClinVarData.builder()
-                .alleleId("361707")
+                .variationId("374823")
                 .primaryInterpretation(ClinVarData.ClinSig.LIKELY_PATHOGENIC)
-                .reviewStatus("criteria_provided,_single_submitter")
+                .reviewStatus(ClinVarData.ReviewStatus.CRITERIA_PROVIDED_SINGLE_SUBMITTER)
                 .build());
 
-        assertParseLineEquals(line, ImmutableList.of(expected));
+        assertParseLineEquals(line, List.of(expected));
     }
 
     @Test
@@ -109,11 +112,10 @@ public class ClinVarAlleleParserTest extends AbstractAlleleParserTester<ClinVarA
         String line = "1	28590	.	T	TTGG	999	PASS	ALLELEID=12345;CLNSIG=Benign/Likely_benign";
         Allele expected = new Allele(1, 28590, "T", "TTGG");
         expected.setClinVarData(ClinVarData.builder()
-                .alleleId("12345")
                 .primaryInterpretation(ClinVarData.ClinSig.BENIGN_OR_LIKELY_BENIGN)
                 .build());
 
-        assertParseLineEquals(line, ImmutableList.of(expected));
+        assertParseLineEquals(line, List.of(expected));
     }
 
     @Test
@@ -121,24 +123,19 @@ public class ClinVarAlleleParserTest extends AbstractAlleleParserTester<ClinVarA
         String line = "1	28590	.	T	TTGG	999	PASS	ALLELEID=12345;CLNSIG=Pathogenic/Likely_pathogenic,_other,_association";
         Allele expected = new Allele(1, 28590, "T", "TTGG");
         expected.setClinVarData(ClinVarData.builder()
-                .alleleId("12345")
                 .primaryInterpretation(ClinVarData.ClinSig.PATHOGENIC_OR_LIKELY_PATHOGENIC)
                 .secondaryInterpretations(EnumSet.of(ClinVarData.ClinSig.OTHER, ClinVarData.ClinSig.ASSOCIATION))
                 .build());
 
-        assertParseLineEquals(line, ImmutableList.of(expected));
+        assertParseLineEquals(line, List.of(expected));
     }
 
     @Test
     public void testParseClnSigUnknownValue() {
         String line = "1	28590	.	T	TTGG	999	PASS	ALLELEID=12345;CLNSIG=WIBBLE!";
         Allele expected = new Allele(1, 28590, "T", "TTGG");
-        expected.setClinVarData(ClinVarData.builder()
-                .alleleId("12345")
-                .primaryInterpretation(ClinVarData.ClinSig.NOT_PROVIDED)
-                .build());
 
-        assertParseLineEquals(line, ImmutableList.of(expected));
+        assertParseLineEquals(line, List.of(expected));
     }
 
 
@@ -147,11 +144,10 @@ public class ClinVarAlleleParserTest extends AbstractAlleleParserTester<ClinVarA
         String line = "1	28590	.	T	TTGG	999	PASS	ALLELEID=12345;CLNREVSTAT=criteria_provided,_conflicting_interpretations";
         Allele expected = new Allele(1, 28590, "T", "TTGG");
         expected.setClinVarData(ClinVarData.builder()
-                .alleleId("12345")
-                .reviewStatus("criteria_provided,_conflicting_interpretations")
+                .reviewStatus(ClinVarData.ReviewStatus.CRITERIA_PROVIDED_CONFLICTING_INTERPRETATIONS)
                 .build());
 
-        assertParseLineEquals(line, ImmutableList.of(expected));
+        assertParseLineEquals(line, List.of(expected));
     }
 
     @Test
@@ -159,11 +155,10 @@ public class ClinVarAlleleParserTest extends AbstractAlleleParserTester<ClinVarA
         String line = "1	28590	.	T	TTGG	999	PASS	ALLELEID=12345;CLNSIGINCL=424752:Pathogenic";
         Allele expected = new Allele(1, 28590, "T", "TTGG");
         expected.setClinVarData(ClinVarData.builder()
-                .alleleId("12345")
-                .includedAlleles(ImmutableMap.of("424752", ClinVarData.ClinSig.PATHOGENIC))
+                .includedAlleles(Map.of("424752", ClinVarData.ClinSig.PATHOGENIC))
                 .build());
 
-        assertParseLineEquals(line, ImmutableList.of(expected));
+        assertParseLineEquals(line, List.of(expected));
     }
 
     @Test
@@ -171,14 +166,13 @@ public class ClinVarAlleleParserTest extends AbstractAlleleParserTester<ClinVarA
         String line = "1	28590	.	T	TTGG	999	PASS	ALLELEID=12345;CLNSIGINCL=424752:Pathogenic|15612:other";
         Allele expected = new Allele(1, 28590, "T", "TTGG");
         expected.setClinVarData(ClinVarData.builder()
-                .alleleId("12345")
-                .includedAlleles(ImmutableMap.of(
+                .includedAlleles(Map.of(
                         "424752", ClinVarData.ClinSig.PATHOGENIC,
                         "15612", ClinVarData.ClinSig.OTHER
                 ))
                 .build());
 
-        assertParseLineEquals(line, ImmutableList.of(expected));
+        assertParseLineEquals(line, List.of(expected));
     }
 
     @Test
@@ -187,15 +181,32 @@ public class ClinVarAlleleParserTest extends AbstractAlleleParserTester<ClinVarA
         Allele expected = new Allele(3, 39307162, "G", "A");
         expected.setRsId("25511");
         expected.setClinVarData(ClinVarData.builder()
-                .alleleId("36774")
-                .reviewStatus("no interpretation for the single variant")
-                .includedAlleles(ImmutableMap.of(
+                .variationId("25511")
+                .reviewStatus(ClinVarData.ReviewStatus.NO_INTERPRETATION_FOR_THE_SINGLE_VARIANT)
+                .includedAlleles(Map.of(
                         "8152", ClinVarData.ClinSig.PATHOGENIC
                 ))
                 .build());
 
-        assertParseLineEquals(line, ImmutableList.of(expected));
+        assertParseLineEquals(line, List.of(expected));
     }
+
+    @Test
+    void testParseClinSigConf() {
+        String line = "13\t100515567\t218256\tG\tA\t.\t.\tCLNREVSTAT=criteria_provided,_conflicting_interpretations;CLNSIG=Conflicting_interpretations_of_pathogenicity;CLNSIGCONF=Pathogenic(5)|Uncertain_significance(1);RS=369982920";
+        Allele expected = new Allele(13, 100515567, "G", "A");
+        expected.setRsId("369982920");
+        expected.setClinVarData(ClinVarData.builder()
+                .variationId("218256")
+                .primaryInterpretation(ClinVarData.ClinSig.CONFLICTING_PATHOGENICITY_INTERPRETATIONS)
+                .reviewStatus(ClinVarData.ReviewStatus.CRITERIA_PROVIDED_CONFLICTING_INTERPRETATIONS)
+                // CLNSIGCONF=Pathogenic(5)|Uncertain_significance(1)
+                .conflictingInterpretationCounts(Map.of(ClinVarData.ClinSig.PATHOGENIC, 5, ClinVarData.ClinSig.UNCERTAIN_SIGNIFICANCE, 1))
+                .build());
+
+        assertParseLineEquals(line, List.of(expected));
+    }
+
     //CLNSIGINCL=424752:Pathogenic
     //CLNSIGINCL=15127:other|15128:other|15334:Pathogenic|15335:Pathogenic|15336:Pathogenic|15337:Pathogenic|15610:Pathogenic|15612:other
 
