@@ -20,17 +20,18 @@
 
 package org.monarchinitiative.exomiser.data.genome.model.parsers;
 
-import com.google.common.collect.ImmutableList;
 import org.junit.jupiter.api.Test;
+import org.monarchinitiative.exomiser.core.proto.AlleleData;
+import org.monarchinitiative.exomiser.core.proto.AlleleProto;
 import org.monarchinitiative.exomiser.data.genome.model.Allele;
-import org.monarchinitiative.exomiser.data.genome.model.AlleleProperty;
 
-import java.util.Collections;
 import java.util.List;
 
 import static org.hamcrest.MatcherAssert.assertThat;
 import static org.hamcrest.Matchers.equalTo;
 import static org.hamcrest.Matchers.is;
+import static org.monarchinitiative.exomiser.core.proto.AlleleProto.FrequencySource.KG;
+import static org.monarchinitiative.exomiser.core.proto.AlleleProto.FrequencySource.TOPMED;
 
 /**
  * @author Jules Jacobsen <j.jacobsen@qmul.ac.uk>
@@ -48,16 +49,15 @@ public class DbSnpAlleleParserTest extends AbstractAlleleParserTester<DbSnpAllel
         String line = "1\t9446333\trs761066172\tG\tA\t.\t.\tRS=761066172;RSPOS=9446333;dbSNPBuildID=144;SSR=0;SAO=0;VP=0x050000000005000002000100;WGT=1;VC=SNV;ASP";
         List<Allele> alleles = instance.parseLine(line);
 
-        assertThat(alleles.size(), equalTo(1));
-        Allele allele = alleles.get(0);
-
-        System.out.println(allele);
-        assertThat(allele.getChr(), equalTo(1));
-        assertThat(allele.getPos(), equalTo(9446333));
-        assertThat(allele.getRsId(), equalTo("rs761066172"));
-        assertThat(allele.getRef(), equalTo("G"));
-        assertThat(allele.getAlt(), equalTo("A"));
-        assertThat(allele.getValues().isEmpty(), is(true));
+        assertThat(alleles.size(), equalTo(0));
+        // These are no longer produced as they have no TOPMED frequency information
+//        Allele allele = alleles.get(0);
+//        assertThat(allele.getChr(), equalTo(1));
+//        assertThat(allele.getPos(), equalTo(9446333));
+//        assertThat(allele.getRsId(), equalTo("rs761066172"));
+//        assertThat(allele.getRef(), equalTo("G"));
+//        assertThat(allele.getAlt(), equalTo("A"));
+//        assertThat(allele.getFrequencies().isEmpty(), is(true));
     }
 
     @Test
@@ -66,24 +66,23 @@ public class DbSnpAlleleParserTest extends AbstractAlleleParserTester<DbSnpAllel
         String line = "1\t12345\t74640812;rs115693429\tG\tA\t.\t.\t.";
         List<Allele> alleles = instance.parseLine(line);
 
-        assertThat(alleles.size(), equalTo(1));
-        Allele allele = alleles.get(0);
-
-        System.out.println(allele);
-        assertThat(allele.getChr(), equalTo(1));
-        assertThat(allele.getPos(), equalTo(12345));
-//        assertThat(allele.getRsId(), equalTo("rs200118651"));
-        assertThat(allele.getRsId(), equalTo("74640812"));
-        assertThat(allele.getRef(), equalTo("G"));
-        assertThat(allele.getAlt(), equalTo("A"));
-        assertThat(allele.getValues().isEmpty(), is(true));
+        assertThat(alleles.size(), equalTo(0));
+        // These are no longer produced as they have no TOPMED frequency information
+//        Allele allele = alleles.get(0);
+//        assertThat(allele.getChr(), equalTo(1));
+//        assertThat(allele.getPos(), equalTo(12345));
+////        assertThat(allele.getRsId(), equalTo("rs200118651"));
+//        assertThat(allele.getRsId(), equalTo("74640812"));
+//        assertThat(allele.getRef(), equalTo("G"));
+//        assertThat(allele.getAlt(), equalTo("A"));
+//        assertThat(allele.getFrequencies().isEmpty(), is(true));
     }
 
 
     @Test
     public void testSingleAlleleSnp() {
         DbSnpAlleleParser instance = new DbSnpAlleleParser();
-        String line = "1\t8036291\trs72854879\tT\tC\t.\t.\tRS=72854879;RSPOS=8036291;dbSNPBuildID=130;SSR=0;SAO=0;VP=0x05010008000515013e000100;GENEINFO=PARK7:11315;WGT=1;VC=SNV;SLO;INT;ASP;VLD;G5;GNO;KGPhase1;KGPhase3;CAF=0.9413,0.05871;COMMON=1";
+        String line = "NC_000001.10\t8036291\trs72854879\tT\tC\t.\t.\tRS=72854879;dbSNPBuildID=130;SSR=0;GENEINFO=PARK7:11315;VC=SNV;INT;GNO;FREQ=1000Genomes:0.9391,0.0609|ALSPAC:0.9992,0.0007784|Estonian:0.9998,0.0002232|GnomAD:0.9427,0.0573|Qatari:0.9306,0.06944|SGDP_PRJ:0.4615,0.5385|TOPMED:0.939,0.061|TWINSUK:0.9995,0.0005394|dbGaP_PopFreq:0.9689,0.03107;COMMON";
         List<Allele> alleles = instance.parseLine(line);
 
         assertThat(alleles.size(), equalTo(1));
@@ -95,7 +94,12 @@ public class DbSnpAlleleParserTest extends AbstractAlleleParserTester<DbSnpAllel
         assertThat(allele.getRsId(), equalTo("rs72854879"));
         assertThat(allele.getRef(), equalTo("T"));
         assertThat(allele.getAlt(), equalTo("C"));
-        assertThat(allele.getValue(AlleleProperty.KG), equalTo(5.8710003f));
+        // FREQ=1000Genomes:0.9391,0.0609 TOPMED:0.939,0.061
+        List<AlleleProto.Frequency> expectedFreqs = List.of(
+                AlleleData.frequencyOf(KG, 6.0899997f),
+                AlleleData.frequencyOf(TOPMED, 6.1f)
+        );
+        assertThat(allele.getFrequencies(), equalTo(expectedFreqs));
     }
 
     @Test
@@ -104,10 +108,10 @@ public class DbSnpAlleleParserTest extends AbstractAlleleParserTester<DbSnpAllel
 
         Allele expected = new Allele(1, 8036291, "T", "C");
         expected.setRsId("rs72854879");
-        expected.addValue(AlleleProperty.KG, 5.8710003f);
-        expected.addValue(AlleleProperty.TOPMED, 8.51707f);
+        expected.addFrequency(AlleleData.frequencyOf(KG, 5.8710003f));
+        expected.addFrequency(AlleleData.frequencyOf(TOPMED, 8.51707f));
 
-        assertParseLineEquals(line, Collections.singletonList(expected));
+        assertParseLineEquals(line, List.of(expected));
     }
 
     @Test
@@ -116,16 +120,16 @@ public class DbSnpAlleleParserTest extends AbstractAlleleParserTester<DbSnpAllel
 
         Allele expected = new Allele(16, 2150254, "G", "A");
         expected.setRsId("rs147967021");
-        expected.addValue(AlleleProperty.KG, 0.01997f);
-        expected.addValue(AlleleProperty.TOPMED, 0.007934f);
+        expected.addFrequency(AlleleData.frequencyOf(KG, 0.01997f));
+        expected.addFrequency(AlleleData.frequencyOf(TOPMED, 0.007934f));
 
-        assertParseLineEquals(line, Collections.singletonList(expected));
+        assertParseLineEquals(line, List.of(expected));
     }
 
     @Test
     public void testSingleAlleleDeletion() {
         DbSnpAlleleParser instance = new DbSnpAlleleParser();
-        String line = "1\t10353088\trs763778935\tTC\tT\t.\t.\tRS=763778935;RSPOS=10353089;dbSNPBuildID=144;SSR=0;SAO=0;VP=0x050000080005000002000200;GENEINFO=KIF1B:23095;WGT=1;VC=DIV;INT;ASP";
+        String line = "1\t10353088\trs763778935\tTC\tT\t.\t.\tRS=763778935;RSPOS=10353089;dbSNPBuildID=144;SSR=0;SAO=0;VP=0x050000080005000002000200;GENEINFO=KIF1B:23095;WGT=1;VC=DIV;INT;ASP;TOPMED=0.99335818042813455,0.00664181957186544";
         List<Allele> alleles = instance.parseLine(line);
 
         assertThat(alleles.size(), equalTo(1));
@@ -137,7 +141,7 @@ public class DbSnpAlleleParserTest extends AbstractAlleleParserTester<DbSnpAllel
         assertThat(allele.getRsId(), equalTo("rs763778935"));
         assertThat(allele.getRef(), equalTo("TC"));
         assertThat(allele.getAlt(), equalTo("T"));
-        assertThat(allele.getValues().isEmpty(), is(true));
+        assertThat(allele.getFrequencies(), equalTo(List.of(AlleleData.frequencyOf(TOPMED, 0.664181957186544f))));
     }
 
     @Test
@@ -146,25 +150,25 @@ public class DbSnpAlleleParserTest extends AbstractAlleleParserTester<DbSnpAllel
         String line = "1\t9633387\trs776815368\tG\tGT,GTT\t.\t.\tRS=776815368;RSPOS=9633387;dbSNPBuildID=144;SSR=0;SAO=0;VP=0x050000080005000002000200;GENEINFO=SLC25A33:84275;WGT=1;VC=DIV;INT;ASP";
         List<Allele> alleles = instance.parseLine(line);
 
-        assertThat(alleles.size(), equalTo(2));
-        Allele allele1 = alleles.get(0);
-
-        System.out.println(allele1);
-        assertThat(allele1.getChr(), equalTo(1));
-        assertThat(allele1.getPos(), equalTo(9633387));
-        assertThat(allele1.getRsId(), equalTo("rs776815368"));
-        assertThat(allele1.getRef(), equalTo("G"));
-        assertThat(allele1.getAlt(), equalTo("GT"));
-        assertThat(allele1.getValues().isEmpty(), is(true));
-
-        Allele allele2 = alleles.get(1);
-        System.out.println(allele2);
-        assertThat(allele2.getChr(), equalTo(1));
-        assertThat(allele2.getPos(), equalTo(9633387));
-        assertThat(allele2.getRsId(), equalTo("rs776815368"));
-        assertThat(allele2.getRef(), equalTo("G"));
-        assertThat(allele2.getAlt(), equalTo("GTT"));
-        assertThat(allele2.getValues().isEmpty(), is(true));
+        assertThat(alleles.size(), equalTo(0));
+        // These are no longer produced as they have no TOPMED frequency information
+//        Allele allele1 = alleles.get(0);
+//        System.out.println(allele1);
+//        assertThat(allele1.getChr(), equalTo(1));
+//        assertThat(allele1.getPos(), equalTo(9633387));
+//        assertThat(allele1.getRsId(), equalTo("rs776815368"));
+//        assertThat(allele1.getRef(), equalTo("G"));
+//        assertThat(allele1.getAlt(), equalTo("GT"));
+//        assertThat(allele1.getFrequencies().isEmpty(), is(true));
+//
+//        Allele allele2 = alleles.get(1);
+//        System.out.println(allele2);
+//        assertThat(allele2.getChr(), equalTo(1));
+//        assertThat(allele2.getPos(), equalTo(9633387));
+//        assertThat(allele2.getRsId(), equalTo("rs776815368"));
+//        assertThat(allele2.getRef(), equalTo("G"));
+//        assertThat(allele2.getAlt(), equalTo("GTT"));
+//        assertThat(allele2.getFrequencies().isEmpty(), is(true));
     }
 
     @Test
@@ -173,25 +177,26 @@ public class DbSnpAlleleParserTest extends AbstractAlleleParserTester<DbSnpAllel
         String line = "1\t9973965\trs555705142\tA\tAT,ATTT\t.\t.\tRS=555705142;RSPOS=9973965;dbSNPBuildID=142;SSR=0;SAO=0;VP=0x050000000005150026000200;WGT=1;VC=DIV;ASP;VLD;G5;KGPhase3;CAF=0.87,.,0.13;COMMON=1";
         List<Allele> alleles = instance.parseLine(line);
 
-        assertThat(alleles.size(), equalTo(2));
-        Allele allele1 = alleles.get(0);
+        assertThat(alleles.size(), equalTo(1));
 
-        System.out.println(allele1);
-        assertThat(allele1.getChr(), equalTo(1));
-        assertThat(allele1.getPos(), equalTo(9973965));
-        assertThat(allele1.getRsId(), equalTo("rs555705142"));
-        assertThat(allele1.getRef(), equalTo("A"));
-        assertThat(allele1.getAlt(), equalTo("AT"));
-        assertThat(allele1.getValues().isEmpty(), is(true));
+        // No longer produced as it has no TOPMED frequency information
+//        Allele allele1 = alleles.get(0);
+//        System.out.println(allele1);
+//        assertThat(allele1.getChr(), equalTo(1));
+//        assertThat(allele1.getPos(), equalTo(9973965));
+//        assertThat(allele1.getRsId(), equalTo("rs555705142"));
+//        assertThat(allele1.getRef(), equalTo("A"));
+//        assertThat(allele1.getAlt(), equalTo("AT"));
+//        assertThat(allele1.getFrequencies().isEmpty(), is(true));
 
-        Allele allele2 = alleles.get(1);
+        Allele allele2 = alleles.get(0);
         System.out.println(allele2);
         assertThat(allele2.getChr(), equalTo(1));
         assertThat(allele2.getPos(), equalTo(9973965));
         assertThat(allele2.getRsId(), equalTo("rs555705142"));
         assertThat(allele2.getRef(), equalTo("A"));
         assertThat(allele2.getAlt(), equalTo("ATTT"));
-        assertThat(allele2.getValue(AlleleProperty.KG), equalTo(13.00f));
+        assertThat(allele2.getFrequencies(), equalTo(List.of(AlleleData.frequencyOf(KG, 13.00f))));
     }
 
     @Test
@@ -200,7 +205,7 @@ public class DbSnpAlleleParserTest extends AbstractAlleleParserTester<DbSnpAllel
         String line = "3\t134153617\trs56011117\tG\tGT,GTT,GTTGT,GTTGTTTTTTTTTGTTT\t.\t.\tRS=56011117;RSPOS=134153617;dbSNPBuildID=129;SSR=0;SAO=0;VP=0x05000000000504002e000204;WGT=1;VC=DIV;ASP;VLD;KGPhase3;NOV;CAF=0.995,0.004992,.,.,.;COMMON=1";
         List<Allele> alleles = instance.parseLine(line);
 
-        assertThat(alleles.size(), equalTo(4));
+        assertThat(alleles.size(), equalTo(1));
         Allele allele1 = alleles.get(0);
 
         assertThat(allele1.getChr(), equalTo(3));
@@ -208,32 +213,33 @@ public class DbSnpAlleleParserTest extends AbstractAlleleParserTester<DbSnpAllel
         assertThat(allele1.getRsId(), equalTo("rs56011117"));
         assertThat(allele1.getRef(), equalTo("G"));
         assertThat(allele1.getAlt(), equalTo("GT"));
-        assertThat(allele1.getValue(AlleleProperty.KG), equalTo(0.4992f));
+        assertThat(allele1.getFrequencies(), equalTo(List.of(AlleleData.frequencyOf(KG, 0.4992f))));
 
-        Allele allele2 = alleles.get(1);
-        assertThat(allele2.getChr(), equalTo(3));
-        assertThat(allele2.getPos(), equalTo(134153617));
-        assertThat(allele2.getRsId(), equalTo("rs56011117"));
-        assertThat(allele2.getRef(), equalTo("G"));
-        assertThat(allele2.getAlt(), equalTo("GTT"));
-        assertThat(allele2.getValues().isEmpty(), is(true));
-
-        Allele allele3 = alleles.get(2);
-
-        assertThat(allele3.getChr(), equalTo(3));
-        assertThat(allele3.getPos(), equalTo(134153617));
-        assertThat(allele3.getRsId(), equalTo("rs56011117"));
-        assertThat(allele3.getRef(), equalTo("G"));
-        assertThat(allele3.getAlt(), equalTo("GTTGT"));
-        assertThat(allele3.getValues().isEmpty(), is(true));
-
-        Allele allele4 = alleles.get(3);
-        assertThat(allele4.getChr(), equalTo(3));
-        assertThat(allele4.getPos(), equalTo(134153617));
-        assertThat(allele4.getRsId(), equalTo("rs56011117"));
-        assertThat(allele4.getRef(), equalTo("G"));
-        assertThat(allele4.getAlt(), equalTo("GTTGTTTTTTTTTGTTT"));
-        assertThat(allele4.getValues().isEmpty(), is(true));
+        // These are no longer produced as they have no frequency information
+//        Allele allele2 = alleles.get(1);
+//        assertThat(allele2.getChr(), equalTo(3));
+//        assertThat(allele2.getPos(), equalTo(134153617));
+//        assertThat(allele2.getRsId(), equalTo("rs56011117"));
+//        assertThat(allele2.getRef(), equalTo("G"));
+//        assertThat(allele2.getAlt(), equalTo("GTT"));
+//        assertThat(allele2.getFrequencies().isEmpty(), is(true));
+//
+//        Allele allele3 = alleles.get(2);
+//
+//        assertThat(allele3.getChr(), equalTo(3));
+//        assertThat(allele3.getPos(), equalTo(134153617));
+//        assertThat(allele3.getRsId(), equalTo("rs56011117"));
+//        assertThat(allele3.getRef(), equalTo("G"));
+//        assertThat(allele3.getAlt(), equalTo("GTTGT"));
+//        assertThat(allele3.getFrequencies().isEmpty(), is(true));
+//
+//        Allele allele4 = alleles.get(3);
+//        assertThat(allele4.getChr(), equalTo(3));
+//        assertThat(allele4.getPos(), equalTo(134153617));
+//        assertThat(allele4.getRsId(), equalTo("rs56011117"));
+//        assertThat(allele4.getRef(), equalTo("G"));
+//        assertThat(allele4.getAlt(), equalTo("GTTGTTTTTTTTTGTTT"));
+//        assertThat(allele4.getFrequencies().isEmpty(), is(true));
     }
 
     /**
@@ -245,9 +251,9 @@ public class DbSnpAlleleParserTest extends AbstractAlleleParserTester<DbSnpAllel
 
         Allele expected = new Allele(3, 134153617, "GGTTT", "G");
         expected.setRsId("rs796981196");
-        expected.addValue(AlleleProperty.TOPMED, 0.664181957186544f);
+        expected.addFrequency(AlleleData.frequencyOf(TOPMED, 0.664181957186544f));
 
-        assertParseLineEquals(line, Collections.singletonList(expected));
+        assertParseLineEquals(line, List.of(expected));
     }
 
     @Test
@@ -256,13 +262,14 @@ public class DbSnpAlleleParserTest extends AbstractAlleleParserTester<DbSnpAllel
 
         Allele allele1 = new Allele(1, 9974103, "A", "C");
         allele1.setRsId("rs527824753");
-        allele1.addValue(AlleleProperty.KG, 0.03994f);
-        allele1.addValue(AlleleProperty.TOPMED, 0.0274744f);
+        allele1.addFrequency(AlleleData.frequencyOf(KG, 0.03994f));
+        allele1.addFrequency(AlleleData.frequencyOf(TOPMED, 0.0274744f));
 
-        Allele allele2 = new Allele(1, 9974103, "A", "T");
-        allele2.setRsId("rs527824753");
+        // This is no longer expected as it has no TOPMED frequency information
+//        Allele allele2 = new Allele(1, 9974103, "A", "T");
+//        allele2.setRsId("rs527824753");
 
-        assertParseLineEquals(line, ImmutableList.of(allele1, allele2));
+        assertParseLineEquals(line, List.of(allele1));
     }
 
     @Test
@@ -271,13 +278,13 @@ public class DbSnpAlleleParserTest extends AbstractAlleleParserTester<DbSnpAllel
 
         Allele allele1 = new Allele(1, 9974103, "A", "C");
         allele1.setRsId("rs527824753");
-        allele1.addValue(AlleleProperty.TOPMED, 0.0274744f);
+        allele1.addFrequency(AlleleData.frequencyOf(TOPMED, 0.0274744f));
 
         Allele allele2 = new Allele(1, 9974103, "A", "T");
         allele2.setRsId("rs527824753");
-        allele2.addValue(AlleleProperty.KG, 0.03994f);
+        allele2.addFrequency(AlleleData.frequencyOf(KG, 0.03994f));
 
-        assertParseLineEquals(line, ImmutableList.of(allele1, allele2));
+        assertParseLineEquals(line, List.of(allele1, allele2));
     }
 
     @Test
@@ -287,33 +294,31 @@ public class DbSnpAlleleParserTest extends AbstractAlleleParserTester<DbSnpAllel
 
         Allele allele1 = new Allele(1, 9974103, "A", "C");
         allele1.setRsId("rs527824753");
-        allele1.addValue(AlleleProperty.KG, 0.03994f);
-        allele1.addValue(AlleleProperty.TOPMED, 0.02389f);
-//        allele1.addValue(AlleleProperty.ALSPAC, 0.02595f);
-//        allele1.addValue(AlleleProperty.TWINSUK, 0.10789999f);
+        allele1.addFrequency(AlleleData.frequencyOf(KG, 0.03994f));
+        allele1.addFrequency(AlleleData.frequencyOf(TOPMED, 0.02389f));
 
         Allele allele2 = new Allele(1, 9974103, "A", "T");
         allele2.setRsId("rs527824753");
-        allele2.addValue(AlleleProperty.TOPMED, 0.005575f);
+        allele2.addFrequency(AlleleData.frequencyOf(TOPMED, 0.005575f));
 
-        assertParseLineEquals(line, ImmutableList.of(allele1, allele2));
+        assertParseLineEquals(line, List.of(allele1, allele2));
     }
 
 
     @Test
     public void testMitochondrialSnp() {
         DbSnpAlleleParser instance = new DbSnpAlleleParser();
-        String line = "MT\t15061\trs527236205\tA\tG\t.\t.\tRS=527236205;RSPOS=15061;dbSNPBuildID=141;SSR=0;SAO=1;VP=0x050060000305000002110100;GENEINFO=CYTB:4519;WGT=1;VC=SNV;PM;REF;SYN;ASP;LSD;OM";
+        String line = "NC_012920.1\t15061\trs527236205\tA\tG\t.\t.\tRS=527236205;dbSNPBuildID=141;SSR=0;GENEINFO=MT-CYB:4519|MT-ND6:4541;VC=SNV;SYN;R5;GNO;FREQ=MGP:0.9963,0.003745|SGDP_PRJ:0,1|TOMMO:0.9984,0.001628|dbGaP_PopFreq:0.9987,0.001336;CLNVI=.,;CLNORIGIN=.,1073741824;CLNSIG=.,4;CLNDISDB=.,MONDO:MONDO:0021068/MeSH:D010051/MedGen:C0919267/OMIM:167000/Human_Phenotype_Ontology:HP:0100615;CLNDN=.,Neoplasm_of_ovary;CLNREVSTAT=.,no_criteria;CLNACC=.,RCV000133452.1;CLNHGVS=NC_012920.1:m.15061=,NC_012920.1:m.15061A>G";
         List<Allele> alleles = instance.parseLine(line);
 
-        assertThat(alleles.size(), equalTo(1));
-        Allele allele = alleles.get(0);
-
-        assertThat(allele.getChr(), equalTo(25));
-        assertThat(allele.getPos(), equalTo(15061));
-        assertThat(allele.getRsId(), equalTo("rs527236205"));
-        assertThat(allele.getRef(), equalTo("A"));
-        assertThat(allele.getAlt(), equalTo("G"));
-        assertThat(allele.getValues().isEmpty(), is(true));
+        assertThat(alleles.size(), equalTo(0));
+        // These are no longer produced as they have no TOPMED frequency information
+//        Allele allele = alleles.get(0);
+//        assertThat(allele.getChr(), equalTo(25));
+//        assertThat(allele.getPos(), equalTo(15061));
+//        assertThat(allele.getRsId(), equalTo("rs527236205"));
+//        assertThat(allele.getRef(), equalTo("A"));
+//        assertThat(allele.getAlt(), equalTo("G"));
+//        assertThat(allele.getFrequencies().isEmpty(), is(true));
     }
 }
